--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </div>
           </div>
 
-<!--           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+<div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ml2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -443,9 +443,9 @@
                 <a href="details-lima.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
-<!--           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+<div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ml3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -453,7 +453,7 @@
                 <a href="details-enam.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
