--- a/index.html
+++ b/index.html
@@ -404,6 +404,16 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-iot">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/details-9.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ml1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
+                <a href="details-empat.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -425,17 +435,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-iot">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/details-9.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/ml1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
-                <a href="details-empat.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-<div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ml2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -443,9 +443,9 @@
                 <a href="details-lima.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
-<div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ml3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -454,7 +454,7 @@
               </div>
             </div>
           </div>
-
+ -->
         </div>
 
       </div>
