--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
 
 <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/ml2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/AGIA.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/ml2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/AGIA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 2"><i class="bx bx-plus"></i></a>
                 <a href="details-lima.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
