--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/LSP.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/LSP.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/LSP2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LSP LPPOM MUI"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/LSP2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LSP LPPOM MUI"><i class="bx bx-plus"></i></a>
                 <a href="details-satu.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -407,9 +407,9 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/AGIA.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/AGIA.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/AGIA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pt. Azka Gilang Mandiri"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/AGIA.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pt. Azka Gilang Mandiri"><i class="bx bx-plus"></i></a>
                 <a href="details-tiga.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
